--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
 body {
     text-align: center;
-    padding: 80px, 60px;
+    margin: 0px;
+    z-index: 1;
+    height: 100%;
 }
 
 img {
     position:absolute;
-    width:100%;
-    height:100%;
+    width:100vw;
+    height:100vh;
     left: 0px;
     top: 0px;
     right:0px;
@@ -15,10 +17,73 @@ img {
     opacity:0.8;
     }
 
+.hidden {
+    display: none;
+}
+
 #clock {
     font-size: 80px;
+    margin-top: 30px;
 }
 #weather {
-    
-    
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 80px;
+    margin-top: 30px;
+}
+
+#quote {
+    font-size: 17px;
+    margin-top: 30px;
+    color: teal;
+    display: flex;
+    flex-direction: column;
+}
+
+.box {
+    background-color:rgba(0,0,0,0.8);
+    padding: 10px;
+    margin: 10px, 40px;
+    border: 2px solid white;
+    border-radius: 10px;
+    color: white;
+}
+
+.longbox {
+    background-color:rgba(0,0,0,0.8);
+    padding: 10px;
+    margin: 10px, 40px;
+    border: 2px solid white;
+    border-radius: 10px;
+    width: 300px;
+    color: white;
+}
+
+.btn {
+    border: none;
+    background-color:rgba(0,0,0,0.8);
+    padding: 10px;
+    margin: 10px, 40px;
+    border: 2px solid white;
+    border-radius: 10px;
+    width: 60px;
+    color: white;
+}
+.todobox, .loginbox {
+    margin-top: 30px;
+}
+
+#todo-list {
+    text-align: left;
+    background-color:rgba(0,0,0,0.3);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+button {
+    margin-left: 30px;
 }
